--- a/bento-grid-main/index.html
+++ b/bento-grid-main/index.html
@@ -5,38 +5,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+<!--   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet"> 
+  -->
   
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/responsive.css">
+
   <title>Frontend Mentor | Bento grid</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
 
-  Social Media 10x Faster with AI
-  Over 4,000 5-star reviews
+  <div class="container">
+    <div class="social-media">
+      <h2>
+        Social Media 
+        <span id="yellow-text">10x</span> <span id="italic-text">Faster</span> 
+        with AI
+      </h2>
+      <img src="./assets/images/illustration-five-stars.webp" alt="5-stars" id="star">
+      <h6>
+        Over 4,000 5-star reviews
+      </h6>
+    </div>
 
-  Manage multiple accounts and platforms.
+    <div class="manage">
+      <img src="./assets/images/illustration-multiple-platforms.webp" alt="multiple platforms" id="multiple-platforms">
+      <h3>
+        Manage multiple accounts and platforms.
+      </h3>
+    </div>
 
-  Maintain a consistent posting schedule.
+    <div class="maintain">
+      <h3>
+        Maintain a consistent posting schedule.
+      </h3>
+      <img src="./assets/images/illustration-consistent-schedule.webp" alt="schedule" id="consistent-schedule">
+    </div>
 
-  Schedule to social media.
-  Optimize post timings to publish content at the perfect time for your audience.
-  
-  Grow followers with non-stop content.
+    <div class="schedule">
+      <h3>
+        Schedule to social media.
+      </h3>
+      <img src="./assets/images/illustration-schedule-posts.webp" alt="schedule posts" id="schedule-posts">
+      <h6>
+        Optimize post timings to publish content at the perfect time for your audience.
+      </h6>
+    </div>
 
-  >56% faster audience growth
-  
-  Create and schedule content quicker.
+    <div class="grow">
+      <img src="./assets/images/illustration-grow-followers.webp" alt="grow followers" id="grow-image">
+      <h3 id="grow-text">
+        Grow followers with non-stop content.
+      </h3>
+    </div>
 
-  Write your content using AI.
-  
+    <div class="faster">
+      <span id="larger-text">>56%</span> 
+      <h6>
+        faster audience growth
+      </h6>
+      <img src="./assets/images/illustration-audience-growth.webp" alt="audience" id="audience-growth">
+    </div>
+
+    <div class="create">
+      <h3>
+        Create and schedule content 
+        <span id="purple-text">quicker.</span>
+      </h3>
+      <img src="./assets/images/illustration-create-post.webp" alt="create post" id="create-post">
+    </div>
+
+    <div class="write">
+      <h3>
+        Write your content using AI.
+      </h3>
+      <img src="./assets/images/illustration-ai-content.webp" alt="ai content" id="ai-content">
+    </div>
+
+  </div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ukpebor Ehiremhen</a>.
   </div>
+
 </body>
 </html>
