Updated Projects Github pages file

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
             color: whitesmoke;
         }
 
+        @media (max-width:768px) {
+            .designs {
+                flex-direction: column;
+            }
+
+            .preview {
+                width: 60%;
+            }
+        }
+
     </style>
 
 </head>
